--- a/src/assets/scss/tools/_variables.scss
+++ b/src/assets/scss/tools/_variables.scss
@@ -5,3 +5,10 @@ $col_main: #FFD100;
 $col_dark: #1A1A1A;
 $col_bg: #EFEFEF;
 $col_grey_mid: #C1C1C1;
+$col_grey_light: #F9F9F9;
+
+// DIMENSIONS
+$dim_header: 75px;
+
+// BORDER
+$border-radius: 20px;
